--- a/project/.eslintrc.json
+++ b/project/.eslintrc.json
@@ -10,7 +10,7 @@
   "overrides": [],
   "parserOptions": {
     "project": [
-      "./tsconfig.json"
+      "project/tsconfig.json"
     ],
     "ecmaVersion": "latest",
     "sourceType": "module"
