--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/server/node_modules
 /server/dist
-/project/node_modules
 /project/.pnp
 /project/.pnp.js
-
+node_modules
 
 # testing
 project/coverage
