--- a/project/package.json
+++ b/project/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-leaflet": "^4.0.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.7.11",
+    "@types/react-helmet": "^6.1.5",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "eslint": "^8.22.0",
     "eslint-config-standard-with-typescript": "^22.0.0",
