--- a/project/package.json
+++ b/project/package.json
@@ -13,7 +13,7 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "1.3.0",
     "react-leaflet": "^4.0.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
@@ -35,11 +35,8 @@
       "react-app",
       "react-app/jest"
     ]
-
-  }
-
-  ,
-  "prettier":{
+  },
+  "prettier": {
     "singleQuote": true
   },
   "browserslist": {
