--- a/project/package.json
+++ b/project/package.json
@@ -54,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/leaflet": "^1.7.11",
     "@types/react-helmet": "^6.1.5",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
