--- a/project/package.json
+++ b/project/package.json
@@ -13,10 +13,11 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "js-cookie": "^3.0.1",
+    "leaflet": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "1.3.0",
-    "react-leaflet": "^4.0.1",
+    "react-leaflet": "4.0.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
