--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -1,5 +1,10 @@
-FROM nginx
+FROM node:18.6-alpine as builder
+WORKDIR /app
+COPY package.json /app/package.json
+RUN npm install --only=prod
+COPY . /app
+RUN npm run build
 
-COPY /build /usr/share/nginx/html
-
+FROM nginx:1.16.0-alpine
+COPY --from=builder /app/build /usr/share/nginx/html
 EXPOSE 80
