--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,9 +32,7 @@ jobs:
           echo ${{ steps.vars.outputs.tag }}
           echo ${{ github.head_ref }}
       - name: Build the Docker image
-        run: |
-          cd server
-          docker build . --file Dockerfile --tag dikardv/scsrv:${{ steps.vars.outputs.tag }}
+        run: docker build ./server/ --file Dockerfile --tag dikardv/scsrv:${{ steps.vars.outputs.tag }}
 
       - name: Docker Push
         run: docker push dikardv/scsrv:${{ steps.vars.outputs.tag }}
@@ -65,9 +63,7 @@ jobs:
           echo ${{ steps.vars.outputs.tag }}
           echo ${{ github.head_ref }}
       - name: Build the Docker image
-        run: |
-          cd project
-          docker build . --file Dockerfile --tag dikardv/sccl:${{ steps.vars.outputs.tag }}
+        run: docker build ./project/ --file Dockerfile --tag dikardv/sccl:${{ steps.vars.outputs.tag }}
 
       - name: Docker Push
         run: docker push dikardv/sccl:${{ steps.vars.outputs.tag }}
