--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:18.6-alpine as builder
 WORKDIR /app
 COPY package.json /app/package.json
-RUN npm install --omit=dev
+RUN npm i -g @nestjs/cli
+RUN npm ci
 COPY . /app
 ENV NODE_ENV=production
 RUN npm run build
@@ -9,7 +10,7 @@ RUN npm run build
 FROM node:18.6-alpine
 WORKDIR /app
 COPY package.json /app/package.json
-RUN npm i
+RUN npm ci
 COPY --from=builder /app/dist /app
 EXPOSE 5500
 CMD ["node", "main.js"]
