--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,7 +2,7 @@ FROM node:18.6-alpine as builder
 WORKDIR /app
 COPY package.json /app/package.json
 RUN npm i -g @nestjs/cli
-RUN npm ci
+RUN npm install --omit=dev
 COPY . /app
 ENV NODE_ENV=production
 RUN npm run build
@@ -10,7 +10,7 @@ RUN npm run build
 FROM node:18.6-alpine
 WORKDIR /app
 COPY package.json /app/package.json
-RUN npm ci
+RUN npm i
 COPY --from=builder /app/dist /app
 EXPOSE 5500
 CMD ["node", "main.js"]
