--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,14 +1,16 @@
-FROM node
-
+FROM node:18.6-alpine as builder
 WORKDIR /app
+COPY package.json /app/package.json
+RUN npm i -g @nestjs/cli
+RUN npm install --omit=dev
+COPY . /app
+ENV NODE_ENV=production
+RUN npm run build
 
-COPY package.json /app
-
+FROM node:18.6-alpine
+WORKDIR /app
+COPY package.json /app/package.json
 RUN npm i
-
-COPY /dist /app
-
+COPY --from=builder /app/dist /app
 EXPOSE 5500
-
-
 CMD ["node", "main.js"]
