--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:18.6-alpine as builder
 WORKDIR /app
 COPY package.json /app/package.json
-RUN npm install --only=prod
+RUN npm install --omit=dev
 COPY . /app
 RUN npm run build
 
