Revert "Fix: Поправил варнинг --omit=dev"
This reverts commit 3896f66b6878e4eb4db0e9c118d5d42a6196ddcb.

--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:latest as builder
 WORKDIR /app
 COPY package.json /app/package.json
-RUN npm install --omit=dev
+RUN npm install --only=prod
 COPY . /app
 RUN npm run build
 
